[package]
name = "pcap-to-json"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap = "1"                                          # Read PCAP files
pnet_packet = "0.34"                                # Parse network packets
serde = { version = "1", features = ["derive"] }    # JSON serialization
serde_json = "1"                                    # JSON output
clap = { version = "4", features = ["derive"] }     # Command line interface
anyhow = "1"                                        # Error handling
chrono = { version = "0.4", features = ["clock"] }  # Timestamp conversion
