[package]
name = "pcap-to-json"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap = "2.3.0"                                      # Read PCAP files
serde = { version = "1", features = ["derive"] }    # JSON serialization
serde_json = "1"                                    # JSON output
chrono = "0.4"                                      # Date and time handling
etherparse = "0.19.0"                               # Ethernet frame parsing
